FIX: wrap upload media when no custom scroll

--- a/src/styles/components/_fileUploader.scss
+++ b/src/styles/components/_fileUploader.scss
@@ -3,6 +3,10 @@
   display: flex;
   flex-wrap: nowrap;
 
+  @include media-breakpoint-down($tablet-breakpoint) {
+    flex-wrap: wrap;
+  }
+
   .addFileView {
     position: relative;
     margin: 0 1em 0.6em 0;
